// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark Mode <SearchInput/> renders correctly 1`] = `
<View
  style={
    {
      "alignContent": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "none",
      "elevation": 0,
      "justifyContent": "flex-start",
      "padding": 2,
      "verticalAlign": "bottom",
      "width": "100%",
      "zIndex": 9999,
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "#F1DDBF",
        "elevation": 0,
        "marginTop": 0,
        "position": "absolute",
        "top": 65,
        "width": "86%",
        "zIndex": 9999,
      }
    }
  />
</View>
`;

exports[`Dark Mode <SearchInput/> renders correctly 2`] = `
<View
  style={
    {
      "alignContent": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "none",
      "elevation": 0,
      "justifyContent": "flex-start",
      "padding": 2,
      "verticalAlign": "bottom",
      "width": "100%",
      "zIndex": 9999,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="search-modal"
  />
</View>
`;

exports[`Light Mode <SearchInput/> modal mode renders correctly 1`] = `
<View
  style={
    {
      "alignContent": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "none",
      "elevation": 0,
      "justifyContent": "flex-start",
      "padding": 2,
      "verticalAlign": "bottom",
      "width": "100%",
      "zIndex": 9999,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="search-modal"
  />
</View>
`;

exports[`Light Mode <SearchInput/> renders correctly 1`] = `
<View
  style={
    {
      "alignContent": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "none",
      "elevation": 0,
      "justifyContent": "flex-start",
      "padding": 2,
      "verticalAlign": "bottom",
      "width": "100%",
      "zIndex": 9999,
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "#F1DDBF",
        "elevation": 0,
        "marginTop": 0,
        "position": "absolute",
        "top": 65,
        "width": "86%",
        "zIndex": 9999,
      }
    }
  />
</View>
`;

exports[`Search Modal <SearchModal /> renders correctly in dark mode 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={null}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 25,
            "height": 1200.6000000000001,
            "width": 645,
          },
          {
            "backgroundColor": "#252A33",
          },
        ]
      }
      testID="modal-view"
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "backgroundColor": "#F1DDBF",
              "marginTop": 0,
              "position": "absolute",
              "top": 90,
              "width": "86%",
            },
            {
              "backgroundColor": "#1E1E1E",
            },
          ]
        }
      >
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Abaca%22%2C%22name%22%3A%22Abaca%22%2C%22hrfNum%22%3A%22935%22%2C%22active%22%3A%22Y%22%2C%22location%22%3A%22Greenhouse%20%234%22%2C%22variety%22%3A%22heirloom%22%2C%22source%22%3A%22home%20depot%22%2C%22date%22%3A%2208%2F22%2F2024%22%2C%22comments%22%3A%22I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22in%20ground%22%2C%22yield%22%3A%223.74%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Abaca
               | Crop Number: 
              935
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Abacas%22%2C%22name%22%3A%22Abacas%22%2C%22hrfNum%22%3A%22935%22%2C%22active%22%3A%22Y%22%2C%22location%22%3A%22Greenhouse%20%234%22%2C%22variety%22%3A%22heirloom%22%2C%22source%22%3A%22home%20depot%22%2C%22date%22%3A%2208%2F22%2F2024%22%2C%22comments%22%3A%22I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22in%20ground%22%2C%22yield%22%3A%223.74%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Abacas
               | Crop Number: 
              935
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Almonds%22%2C%22name%22%3A%22Almonds%22%2C%22hrfNum%22%3A%22543%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Hugel%20Mound%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F01%2F2020%22%2C%22comments%22%3A%22The%20weather%20has%20been%20rough%20on%20this%20crop%20lately.%20I'm%20planning%20to%20expand%20this%20crop%20in%20the%20near%20future.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.46%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Almonds
               | Crop Number: 
              543
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Alfalfas%22%2C%22name%22%3A%22Alfalfas%22%2C%22hrfNum%22%3A%22337%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Yard%22%2C%22variety%22%3A%22beefsteak%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2204%2F03%2F2021%22%2C%22comments%22%3A%22Despite%20some%20initial%20setbacks%2C%20the%20crop%20is%20showing%20signs%20of%20resilience.%20I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%20Nothing%20for%20now.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22biennial%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.66%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Alfalfas
               | Crop Number: 
              337
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Almond%22%2C%22name%22%3A%22Almond%22%2C%22hrfNum%22%3A%22543%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Hugel%20Mound%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F01%2F2020%22%2C%22comments%22%3A%22The%20weather%20has%20been%20rough%20on%20this%20crop%20lately.%20I'm%20planning%20to%20expand%20this%20crop%20in%20the%20near%20future.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.46%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Almond
               | Crop Number: 
              543
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Apples%22%2C%22name%22%3A%22Apples%22%2C%22hrfNum%22%3A%22921%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Greenhouse%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F09%2F2015%22%2C%22comments%22%3A%22This%20crop%20is%20doing%20exceptionally%20well.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22raised%20bed%22%2C%22yield%22%3A%223.04%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Apples
               | Crop Number: 
              921
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Alfalfa%22%2C%22name%22%3A%22Alfalfa%22%2C%22hrfNum%22%3A%22337%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Yard%22%2C%22variety%22%3A%22beefsteak%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2204%2F03%2F2021%22%2C%22comments%22%3A%22Despite%20some%20initial%20setbacks%2C%20the%20crop%20is%20showing%20signs%20of%20resilience.%20I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%20Nothing%20for%20now.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22biennial%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.66%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Alfalfa
               | Crop Number: 
              337
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Anise%22%2C%22name%22%3A%22Anise%22%2C%22hrfNum%22%3A%22200%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Orchard%20%233%22%2C%22variety%22%3A%22black%22%2C%22source%22%3A%22johnny's%20selected%20seeds%22%2C%22date%22%3A%2208%2F25%2F2022%22%2C%22comments%22%3A%22I'm%20considering%20introducing%20some%20companion%20plants%20to%20improve%20soil%20fertility.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22container%22%2C%22yield%22%3A%224.86%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Anise
               | Crop Number: 
              200
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Apple%22%2C%22name%22%3A%22Apple%22%2C%22hrfNum%22%3A%22921%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Greenhouse%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F09%2F2015%22%2C%22comments%22%3A%22This%20crop%20is%20doing%20exceptionally%20well.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22raised%20bed%22%2C%22yield%22%3A%223.04%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Apple
               | Crop Number: 
              921
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Anises%22%2C%22name%22%3A%22Anises%22%2C%22hrfNum%22%3A%22200%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Orchard%20%233%22%2C%22variety%22%3A%22black%22%2C%22source%22%3A%22johnny's%20selected%20seeds%22%2C%22date%22%3A%2208%2F25%2F2022%22%2C%22comments%22%3A%22I'm%20considering%20introducing%20some%20companion%20plants%20to%20improve%20soil%20fertility.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22container%22%2C%22yield%22%3A%224.86%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              {
                "backgroundColor": "#92BA92",
              },
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Anises
               | Crop Number: 
              200
            </Text>
          </View>
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Search Modal <SearchModal /> renders correctly in light mode 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={null}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 25,
            "height": 1200.6000000000001,
            "width": 645,
          },
          {
            "backgroundColor": "#97A5BF",
          },
        ]
      }
      testID="modal-view"
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "backgroundColor": "#F1DDBF",
              "marginTop": 0,
              "position": "absolute",
              "top": 90,
              "width": "86%",
            },
            false,
          ]
        }
      >
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Abaca%22%2C%22name%22%3A%22Abaca%22%2C%22hrfNum%22%3A%22935%22%2C%22active%22%3A%22Y%22%2C%22location%22%3A%22Greenhouse%20%234%22%2C%22variety%22%3A%22heirloom%22%2C%22source%22%3A%22home%20depot%22%2C%22date%22%3A%2208%2F22%2F2024%22%2C%22comments%22%3A%22I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22in%20ground%22%2C%22yield%22%3A%223.74%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Abaca
               | Crop Number: 
              935
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Abacas%22%2C%22name%22%3A%22Abacas%22%2C%22hrfNum%22%3A%22935%22%2C%22active%22%3A%22Y%22%2C%22location%22%3A%22Greenhouse%20%234%22%2C%22variety%22%3A%22heirloom%22%2C%22source%22%3A%22home%20depot%22%2C%22date%22%3A%2208%2F22%2F2024%22%2C%22comments%22%3A%22I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22in%20ground%22%2C%22yield%22%3A%223.74%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Abacas
               | Crop Number: 
              935
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Almonds%22%2C%22name%22%3A%22Almonds%22%2C%22hrfNum%22%3A%22543%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Hugel%20Mound%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F01%2F2020%22%2C%22comments%22%3A%22The%20weather%20has%20been%20rough%20on%20this%20crop%20lately.%20I'm%20planning%20to%20expand%20this%20crop%20in%20the%20near%20future.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.46%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Almonds
               | Crop Number: 
              543
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Alfalfas%22%2C%22name%22%3A%22Alfalfas%22%2C%22hrfNum%22%3A%22337%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Yard%22%2C%22variety%22%3A%22beefsteak%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2204%2F03%2F2021%22%2C%22comments%22%3A%22Despite%20some%20initial%20setbacks%2C%20the%20crop%20is%20showing%20signs%20of%20resilience.%20I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%20Nothing%20for%20now.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22biennial%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.66%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Alfalfas
               | Crop Number: 
              337
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Almond%22%2C%22name%22%3A%22Almond%22%2C%22hrfNum%22%3A%22543%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Hugel%20Mound%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F01%2F2020%22%2C%22comments%22%3A%22The%20weather%20has%20been%20rough%20on%20this%20crop%20lately.%20I'm%20planning%20to%20expand%20this%20crop%20in%20the%20near%20future.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.46%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Almond
               | Crop Number: 
              543
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Apples%22%2C%22name%22%3A%22Apples%22%2C%22hrfNum%22%3A%22921%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Greenhouse%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F09%2F2015%22%2C%22comments%22%3A%22This%20crop%20is%20doing%20exceptionally%20well.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22raised%20bed%22%2C%22yield%22%3A%223.04%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Apples
               | Crop Number: 
              921
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Alfalfa%22%2C%22name%22%3A%22Alfalfa%22%2C%22hrfNum%22%3A%22337%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Yard%22%2C%22variety%22%3A%22beefsteak%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2204%2F03%2F2021%22%2C%22comments%22%3A%22Despite%20some%20initial%20setbacks%2C%20the%20crop%20is%20showing%20signs%20of%20resilience.%20I'm%20considering%20trying%20a%20different%20planting%20method%20next%20season.%20Nothing%20for%20now.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22biennial%22%2C%22media%22%3A%22aquaponic%22%2C%22yield%22%3A%221.66%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Alfalfa
               | Crop Number: 
              337
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Anise%22%2C%22name%22%3A%22Anise%22%2C%22hrfNum%22%3A%22200%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Orchard%20%233%22%2C%22variety%22%3A%22black%22%2C%22source%22%3A%22johnny's%20selected%20seeds%22%2C%22date%22%3A%2208%2F25%2F2022%22%2C%22comments%22%3A%22I'm%20considering%20introducing%20some%20companion%20plants%20to%20improve%20soil%20fertility.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22container%22%2C%22yield%22%3A%224.86%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Anise
               | Crop Number: 
              200
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Apple%22%2C%22name%22%3A%22Apple%22%2C%22hrfNum%22%3A%22921%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Greenhouse%20%231%22%2C%22variety%22%3A%22green%22%2C%22source%22%3A%22walmart%22%2C%22date%22%3A%2201%2F09%2F2015%22%2C%22comments%22%3A%22This%20crop%20is%20doing%20exceptionally%20well.%22%2C%22indoors%22%3A%22Yes%22%2C%22type%22%3A%22annual%22%2C%22media%22%3A%22raised%20bed%22%2C%22yield%22%3A%223.04%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Apple
               | Crop Number: 
              921
            </Text>
          </View>
        </Text>
        <Text
          href="/cropspage?param=%7B%22label%22%3A%22Anises%22%2C%22name%22%3A%22Anises%22%2C%22hrfNum%22%3A%22200%22%2C%22active%22%3A%22N%22%2C%22location%22%3A%22Orchard%20%233%22%2C%22variety%22%3A%22black%22%2C%22source%22%3A%22johnny's%20selected%20seeds%22%2C%22date%22%3A%2208%2F25%2F2022%22%2C%22comments%22%3A%22I'm%20considering%20introducing%20some%20companion%20plants%20to%20improve%20soil%20fertility.%22%2C%22indoors%22%3A%22No%22%2C%22type%22%3A%22perennial%22%2C%22media%22%3A%22container%22%2C%22yield%22%3A%224.86%20kg%2Fha%22%7D"
          onPress={[Function]}
          role="link"
          style={
            [
              {
                "backgroundColor": "#FFFADA",
                "flex": 1,
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 10,
                "height": "auto",
                "marginHorizontal": 10,
                "marginVertical": 6,
                "padding": 10,
                "width": "auto",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "flex": 0.8,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "flexWrap": "wrap",
              }
            }
          >
            <Text
              style={
                {
                  "flex": 0.8,
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                }
              }
            >
              Name: 
              Anises
               | Crop Number: 
              200
            </Text>
          </View>
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
